# lk-agents

./: .env.example  .gitignore  README.md  create_inbound_trunk.py  dispatch_rule.json  inbound_trunk.json  lk_twilio_connector.py  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 4692689b044d_initial_migration.py  e1e3dba5167b_add_account_id.py  e5f9fe65b7c4_initial_migration.py
app/: logging.py  utils.py
app/agent/: deps.py  models.py  routes.py  runner.py  schema.py  service.py  tools.py
app/core/: config.py  database.py
app/knowledgebase/: models.py  routes.py
app/lk_connector/: models.py  routes.py
com_bridge/: dialer.py  schemas.py
mock_db/: mock_agent_data.py
