[project]
name = "voicecab-voiceai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "cuid2>=2.0.1",
    "fastapi>=0.115.9",
    "httpx>=0.28.1",
    "livekit-agents>=0.12.11",
    "livekit-plugins-cartesia>=0.4.7",
    "livekit-plugins-deepgram>=0.6.17",
    "livekit-plugins-elevenlabs>=0.7.13",
    "livekit-plugins-google>=0.10.5",
    "livekit-plugins-openai[vertex]>=0.10.17",
    "livekit-plugins-silero>=0.7.4",
    "livekit-plugins-turn-detector>=0.4.0",
    "loguru>=0.7.3",
    "openai>=1.65.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv~=1.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
    "twilio>=9.4.6",
    "uv>=0.6.3",
]
